@@ -37,6 +37,7 @@ t/17-pseudoprime.t
 t/20-primorial.t
 t/21-conseq-lcm.t
 t/22-partitions.t
+t/23-gcd.t
 t/50-factoring.t
 t/90-release-perlcritic.t
 t/91-release-pod-syntax.t
