@@ -1,4 +1,4 @@
-Math::Prime::Util::GMP version 0.16
+Math::Prime::Util::GMP version 0.17
 
 A set of utilities related to prime numbers.  These include multiple sieving
 methods, primality tests, primality proving methods, prime counts using
@@ -59,7 +59,7 @@ Perl 5.6.2 or later.  No modules outside of Core have been used.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2011-2012 by Dana Jacobsen <dana@acm.org>
+Copyright (C) 2011-2014 by Dana Jacobsen <dana@acm.org>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
