@@ -1,0 +1,96 @@
+#!/usr/bin/env perl
+use strict;
+use warnings;
+
+use Test::More;
+use Math::Prime::Util::GMP qw/gcd lcm kronecker/;
+my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
+
+my @gcds = (
+  [ [], 0],
+  [ [8], 8],
+  [ [9,9], 9],
+  [ [0,0], 0],
+  [ [1, 0, 0], 1],
+  [ [0, 0, 1], 1],
+  [ [17,19], 1 ],
+  [ [54,24], 6 ],
+  [ [42,56], 14],
+  [ [ 9,28], 1 ],
+  [ [48,180], 12],
+  [ [2705353758,2540073744,3512215098,2214052398], 18],
+  [ [2301535282,3609610580,3261189640], 106],
+  [ [694966514,510402262,195075284,609944479], 181],
+  [ [294950648,651855678,263274296,493043500,581345426], 58 ],
+  [ [-30,-90,90], 30],
+  [ [-3,-9,-18], 3],
+);
+
+my @lcms = (
+  [ [], 0],
+  [ [8], 8],
+  [ [9,9], 9],
+  [ [0,0], 0],
+  [ [1, 0, 0], 0],
+  [ [0, 0, 1], 0],
+  [ [17,19], 323 ],
+  [ [54,24], 216 ],
+  [ [42,56], 168],
+  [ [ 9,28], 252 ],
+  [ [48,180], 720],
+  [ [36,45], 180],
+  [ [-36,45], 180],
+  [ [-36,-45], 180],
+  [ [30,15,5], 30],
+  [ [2,3,4,5], 60],
+  [ [30245, 114552], 3464625240],
+  [ [11926,78001,2211], 2790719778],
+  [ [1426,26195,3289,8346], 4254749070],
+);
+
+my @kroneckers = (
+  [ 109981, 737777,  1],
+  [ 737779, 121080, -1],
+  [-737779, 121080,  1],
+  [ 737779,-121080, -1],
+  [-737779,-121080, -1],
+  [12345,331,-1],
+  [1001,9907,-1],
+  [19,45,1],
+  [8,21,-1],
+  [5,21,1],
+  [5,1237,-1],
+  [10, 49, 1],
+  [123,4567,-1],
+  [3,18,0], [3,-18,0],
+  [-2, 0, 0],  [-1, 0, 1],  [ 0, 0, 0],  [ 1, 0, 1],  [ 2, 0, 0],
+  [-2, 1, 1],  [-1, 1, 1],  [ 0, 1, 1],  [ 1, 1, 1],  [ 2, 1, 1],
+  [-2,-1,-1],  [-1,-1,-1],  [ 0,-1, 1],  [ 1,-1, 1],  [ 2,-1, 1],
+  # Some cases trying to make sure we're not turning UVs into IVs
+  [ 3686556869,  428192857,  1],
+  [-1453096827,  364435739, -1],
+  [ 3527710253, -306243569, 1],
+  [-1843526669, -332265377, 1],
+  [  321781679, 4095783323, -1],
+  [  454249403,  -79475159, -1],
+);
+
+plan tests => scalar(@gcds) + scalar(@lcms) + scalar(@kroneckers);
+
+foreach my $garg (@gcds) {
+  my($aref, $exp) = @$garg;
+  my $gcd = gcd(@$aref);
+  is( $gcd, $exp, "gcd(".join(",",@$aref).") = $exp" );
+}
+
+foreach my $garg (@lcms) {
+  my($aref, $exp) = @$garg;
+  my $lcm = lcm(@$aref);
+  is( $lcm, $exp, "lcm(".join(",",@$aref).") = $exp" );
+}
+
+foreach my $karg (@kroneckers) {
+  my($a, $n, $exp) = @$karg;
+  my $k = kronecker($a, $n);
+  is( $k, $exp, "kronecker($a, $n) = $exp" );
+}
